feat: 尺子功能开发

--- a/src/views/Edit/Main/index.module.scss
+++ b/src/views/Edit/Main/index.module.scss
@@ -13,8 +13,8 @@
   .rule-x {
     position: absolute;
     background-color: #0d1013;
-    width: calc(100% - 24px);
-    height: 24px;
+    // width: calc(100% - 24px);
+    // height: 24px;
     top: 0;
     left: 24px;
   }
