--- a/src/views/Edit/Header/index.module.scss
+++ b/src/views/Edit/Header/index.module.scss
@@ -2,9 +2,61 @@
   height: 50px;
   background-color: #050505;
   color: #fff;
+  padding: 0 12px;
 }
 
 .switch-box {
   width: 80px;
   height: 24px;
+  background-color: #303640;
+  border-radius: 12px;
+
+  position: relative;
+  cursor: pointer;
+  .switch-item {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    z-index: 1;
+  }
+  .slid {
+    position: absolute;
+    width: 50%;
+    height: 24px;
+    left: 0;
+    background-color: #4f7aff;
+    border-radius: 12px;
+    z-index: 0;
+    transition: all 0.3s;
+    &.current {
+      left: 50%;
+    }
+  }
+}
+.left-menu-item {
+  width: 24px;
+  height: 24px;
+  background-color: #4f7aff;
+  border-radius: 50%;
+  margin-right: 12px;
+  cursor: pointer;
+}
+.right-menu {
+  font-size: 12px;
+  color: #b9c4c8;
+  .right-menu-item {
+    margin-left: 24px;
+    cursor: pointer;
+    span {
+      margin-top: 4px;
+    }
+  }
+}
+.title {
+  color: #b9c4c8;
+  margin-left: 12px;
+  font-size: 12px;
 }
